# VIP25_Detect-SGG

./: .gitignore  OD_SGG_Notes.md  Person_Follower ROS2 Simulation Implementation.md  README.md  README_OD_SGG_Notes.md  Target_Object_Follower ROS2 Simulation Implementation.md  YOLO_Detector_ROS2_Jazzy.py  YOLOv8 ROS Noetic Implementation.md  YOLOv8 ROS2 Implementation.md  YOLOv8 ROS2 Simulation Implementation.md  deepmind_bot_reference.txt
Archive/: README.md  YOLO_Detector_ROS2_Humble.py
Archive/ros_Melodic_target_object_follower/: YOLOv8_Target_Object_Follower_ROS_Noetic_Implementation.md
Archive/ros_Melodic_target_object_follower/advanced_perception/: package.xml
Archive/ros_Melodic_target_object_follower/advanced_perception/scripts/: yolo_target_object_follower.py  yolov8_object_detection.py
Archive/ros_Melodic_target_object_follower/custom_msgs/: CMakeLists.txt  package.xml
Archive/yolobot/: Instructions-to-ALPER.txt
Archive/yolobot/src/yolobot_description/: CMakeLists.txt  package.xml
Archive/yolobot/src/yolobot_gazebo/: CMakeLists.txt  package.xml
Archive/yolobot/src/yolobot_gazebo/launch/: start_world_launch.py  yolobot_with_rviz.launch.py
Archive/yolobot/src/yolobot_gazebo/scripts/: fix_texture_paths.sh
Archive/yolobot/src/yolobot_recognition/: package.xml
ros2_object_segmentation_node/src/advanced_perception/: setup.py
ros2_object_segmentation_node/src/advanced_perception/advanced_perception/: yolo11_object_detection.py  yolo_object_mask_saver.py  yolo_segmentation.py  yolov8_object_detection.py
ros2_person_follower/src/advanced_perception/: setup.py
ros2_person_follower/src/advanced_perception/advanced_perception/: yolo_person_follower.py  yolo_target_object_follower.py
ros2_scene_graph_generator/: Scene Graph Builder ROS2 Simulation Implementation.md  Scene Graph Builder Real Cam Instructions.txt  ros2_use_instructions.txt
ros2_scene_graph_generator/advanced_perception/advanced_perception/: scene_graph_builder.py  yolo_object_mask_saver.py  yolo_segmentation.py  yolov8_object_detection.py
ros2_scene_graph_generator/custom_msgs/: package.xml
ros2_scene_graph_generator/object_spawner/: package.xml  setup.py
ros2_scene_graph_generator/object_spawner/launch/: spawn_models_minimal.launch.py
ros2_scene_graph_generator_v2/: Scene Graph Builder Real Cam Instructions.txt
ros2_scene_graph_generator_v2/advanced_perception/advanced_perception/: scene_graph_builder.py  scene_graph_builder_backup.py  scene_graph_builder_markers_unused.py  yolo_object_mask_saver.py  yolo_segmentation.py
ros2_scene_graph_generator_v2/custom_msgs/msg/: DetectedSurface.msg
ros2_scene_graph_generator_v2/record3d_ros2/: setup.py
ros2_scene_graph_generator_v3/: Scene Graph Builder Real Cam Instructions.txt  requirements.txt
ros2_scene_graph_generator_v3/install/: local_setup.sh  setup.sh
ros2_scene_graph_generator_v3/log/: latest_build
ros2_scene_graph_generator_v3/src/advanced_perception/: setup.py
ros2_scene_graph_generator_v3/src/advanced_perception/advanced_perception/: scene_graph_builder_oncall.py  surface_detector.py  yolo_segmentation.py
ros2_scene_graph_generator_v3/src/custom_msgs/: CMakeLists.txt
ros2_scene_graph_generator_v3/src/record3d_ros2/: package.xml  setup.cfg
ros2_scene_graph_generator_with_Depth/: Scene Graph Builder Real Cam Instructions.txt  ros2_use_instructions.txt
ros2_scene_graph_generator_with_Depth/advanced_perception/advanced_perception/: scene_graph_builder.py  yolo_object_mask_saver.py  yolo_segmentation.py  yolov8_object_detection_requires_editing.py
ros2_scene_graph_generator_with_Depth/custom_msgs/: CMakeLists.txt
ros2_scene_graph_generator_with_Depth/record3d_ros2/record3d_ros2/: record3d_publisher.py
ros2_target_object_follower/src/advanced_perception/: setup.py
ros2_target_object_follower/src/advanced_perception/advanced_perception/: yolo_person_follower.py  yolo_target_object_follower.py  yolov8_object_detection.py
ros2_target_object_follower/src/custom_msgs/msg/: YoloInference.msg
ros2_ws_YOLO_detector/: YOLOv8 ROS2 Simulation Implementation.md
ros2_ws_YOLO_detector/src/advanced_perception/: setup.py
ros2_ws_YOLO_detector/src/advanced_perception/advanced_perception/: yolo_object_detection.py
ros2_ws_YOLO_detector/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_yolov8-11_detectors/src/advanced_perception/: setup.py
ros2_yolov8-11_detectors/src/custom_msgs/: CMakeLists.txt
ros_Noetic_target_object_follower/advanced_perception/: CMakeLists.txt
ros_Noetic_target_object_follower/advanced_perception/scripts/: yolo_target_object_follower.py  yolov8_object_detection.py
ros_Noetic_target_object_follower/custom_msgs/: CMakeLists.txt
ros_Noetic_ws_YOLO_detector/: YOLOv8_ROS_Noetic_Implementation.md
ros_Noetic_ws_YOLO_detector/src/advanced_perception/: package.xml
ros_Noetic_ws_YOLO_detector/src/advanced_perception/scripts/: yolo_object_detection.py
ros_Noetic_ws_YOLO_detector/src/custom_msgs/: CMakeLists.txt
ros_noetic_ws_YOLO_detector/src/advanced_perception/: CMakeLists.txt
ros_noetic_ws_YOLO_detector/src/advanced_perception/scripts/: yolo_object_detection.py
ros_noetic_ws_YOLO_detector/src/custom_msgs/: package.xml
yolobot/: Dockerfile  requirements.txt
yolobot/src/yolobot_control/: setup.py
yolobot/src/yolobot_recognition/: CMakeLists.txt
(+107 files in other folders)
