<?xml version="1.0"?>
<package format="2">
  <name>advanced_perception</name>
  <version>0.0.0</version>
  <description>YOLO object detection package for ROS Noetic</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
</package>
