<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for YOLOv8 inference results</description>
  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
